--- a/src/index.scss
+++ b/src/index.scss
@@ -105,9 +105,23 @@ header {
   width: 420px;
   height: 100%;
 
+  .items {
+    margin-bottom: 40px;
+    overflow: auto;
+    scrollbar-width: none;
+  }
+
+  ::-webkit-scrollbar {
+    width: 0;
+  }
+
   h2 {
     margin: 0;
     font-size: 24px;
+
+    img {
+      cursor: pointer;
+    }
   }
 }
 
@@ -133,31 +147,74 @@ header {
   b {
     font-size: 14px;
   }
+}
 
-  .btn-remove {
-    transition: opacity 0.15s ease-in-out;
-    opacity: 0.5;
-    cursor: pointer;
+.btn-remove {
+  transition: opacity 0.15s ease-in-out;
+  opacity: 0.5;
+  cursor: pointer;
 
-    &:hover {
-      opacity: 1;
-    }
+  &:hover {
+    opacity: 1;
   }
 }
 
 .cart-total-block {
-  li {
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 20px;
+  ul {
+    display: block;
+    margin-bottom: 40px !important;
+
+    li {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 20px;
+    }
+
+    div {
+      position: relative;
+      top: -4px;
+      flex: 1;
+      margin: 0 7px;
+      border-bottom: 1px dashed #dfdfdf;
+      height: 1px;
+    }
   }
 
-  div {
+  .green-button {
     position: relative;
-    top: -4px;
-    flex: 1;
-    margin: 0 7px;
-    border-bottom: 1px dashed #dfdfdf;
-    height: 1px;
+
+    &:hover {
+      img {
+        transform: translateX(5px);
+      }
+    }
+
+    img {
+      position: absolute;
+      top: 22px;
+      right: 30px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
+
+.green-button {
+  transition: background 0.2s ease-in-out;
+  border: 0;
+  border-radius: 18px;
+  background: #9dd558;
+  cursor: pointer;
+  width: 100%;
+  height: 55px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+
+  &:hover {
+    background: lighten(#9dd558, 5%);
+  }
+
+  &:active {
+    background: darken(#9dd558, 5%);
   }
 }
