--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,6 +1,7 @@
 .card {
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
-  margin-right: 30px;
+  margin-right: 36px;
+  margin-bottom: 30px;
   border: 1px solid #f3f3f3;
   border-radius: 40px;
   padding: 30px;
@@ -9,6 +10,10 @@
   &:hover {
     transform: translateY(-5px);
     box-shadow: 0 20px 35px rgba(0, 0, 0, 0.06);
+  }
+
+  &:nth-child(4n) {
+    margin-right: 0;
   }
 
   .favorite {
