--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
+html {
+  scrollbar-width: none;
+
+  ::-webkit-scrollbar {
+    width: 0;
+  }
+}
+
 body {
   margin: 0;
   background-color: #e7f6ff;
@@ -64,6 +72,8 @@ header {
   padding: 30px;
   width: 420px;
   height: 100%;
+  // transform: translateX(420px);
+  // transition: transform 0.5s ease-in-out;
 
   .items {
     margin-bottom: 40px;
@@ -83,6 +93,19 @@ header {
       cursor: pointer;
     }
   }
+}
+
+.drawer-enter {
+  opacity: 1;
+}
+
+.drawer-enter-active {
+  transition: opacity 0.5s;
+  opacity: 0;
+}
+
+.drawer-enter-done {
+  opacity: 0;
 }
 
 .cart-item {
