--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,11 +1,12 @@
 .card {
+  position: relative;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
   margin-right: 36px;
   margin-bottom: 30px;
   border: 1px solid #f3f3f3;
   border-radius: 40px;
   padding: 30px;
-  width: 220px;
+  width: 210px;
 
   &:hover {
     transform: translateY(-5px);
@@ -18,6 +19,8 @@
 
   .favorite {
     position: absolute;
+    top: 39px;
+    left: 26px;
     cursor: pointer;
   }
 
@@ -28,7 +31,20 @@
   }
 
   h5 {
+    margin: 14px 0;
     font-size: 14px;
     font-weight: 400;
+  }
+
+  .btn-add {
+    border: 1px solid #f2f2f2;
+    border-radius: 8px;
+    background: transparent;
+    width: 32px;
+    height: 32px;
+  }
+
+  .progress {
+    border: 0;
   }
 }
