--- a/src/index.scss
+++ b/src/index.scss
@@ -69,7 +69,7 @@ header {
 }
 
 .overlay-enter-active {
-  transition: opacity 0.5s;
+  transition: opacity 0.3s;
   opacity: 1;
 }
 
@@ -82,7 +82,7 @@ header {
 }
 
 .overlay-exit-active {
-  transition: opacity 0.5s;
+  transition: opacity 0.3s;
   opacity: 0;
 }
 
@@ -126,7 +126,7 @@ header {
 
 .drawer-enter-active {
   transform: translateX(0);
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 .drawer-enter-done {
@@ -139,7 +139,7 @@ header {
 
 .drawer-exit-active {
   transform: translateX(420px);
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 .drawer-exit-done {
@@ -237,5 +237,45 @@ header {
 
   &:active {
     background: darken(#9dd558, 5%);
+  }
+}
+
+.loader {
+  border: 2px solid;
+  border-radius: 50%;
+  border-color: #d3d3d3 transparent transparent;
+  width: 25px;
+  height: 25px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.alert-tray {
+  position: fixed;
+  bottom: 0;
+  left: 20px;
+  height: 245px;
+
+  .alert {
+    margin-bottom: 20px;
+    border: 1px solid #f3f3f3;
+    border-radius: 40px;
+    background: #fff;
+    padding: 30px 0;
+    width: 250px;
+    height: 60px;
+
+    p {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      font-size: 18px;
+      font-weight: 600;
+      font-style: normal;
+    }
   }
 }
