--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -24,16 +24,20 @@
     cursor: pointer;
   }
 
+  h5 {
+    display: -webkit-box;
+    margin: 14px 0;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    font-size: 14px;
+    font-weight: 400;
+  }
+
   span {
     opacity: 0.5;
     text-transform: uppercase;
     font-size: 12px;
-  }
-
-  h5 {
-    margin: 14px 0;
-    font-size: 14px;
-    font-weight: 400;
   }
 
   .btn-add {
