--- a/src/index.scss
+++ b/src/index.scss
@@ -259,12 +259,14 @@ header {
   position: fixed;
   bottom: 0;
   left: 20px;
+  flex-direction: column-reverse;
   height: 245px;
 
   .alert {
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     border: 1px solid #f3f3f3;
     border-radius: 40px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     background: #fff;
     padding: 30px 0;
     width: 250px;
