--- a/src/index.scss
+++ b/src/index.scss
@@ -59,7 +59,7 @@ header {
   top: 0;
   left: 0;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
 }
@@ -280,4 +280,30 @@ header {
       font-style: normal;
     }
   }
+}
+
+.page-animation-enter {
+  opacity: 0;
+}
+
+.page-animation-enter-active {
+  transition: opacity 0.3s linear;
+  opacity: 1;
+}
+
+.page-animation-enter-done {
+  opacity: 1;
+}
+
+.page-animation-exit {
+  opacity: 1;
+}
+
+.page-animation-exit-active {
+  transition: opacity 0.3s linear;
+  opacity: 0;
+}
+
+.page-animation-exit-done {
+  opacity: 0;
 }
