--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,4 +5,13 @@ header {
   p {
     margin: 0;
   }
+
+  span {
+    line-height: 17px;
+    color: #5c5c5c;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: normal;
+  }
 }
